.opsera-clarity-1/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-clarity-1-dev
  labels:
    app: clarity-1
    environment: dev
    tenant: opsera
    managed-by: argocd
